[gd_scene load_steps=54 format=3 uid="uid://bibik3ob14b5h"]

[ext_resource type="Script" uid="uid://c5w031um8aepb" path="res://scripts/main.gd" id="1_55fuk"]
[ext_resource type="PackedScene" uid="uid://bq86r4yll8po" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_fullglove_low.tscn" id="2_ctxlm"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="3_2xt5l"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="4_1kg22"]
[ext_resource type="Script" uid="uid://coarfit0h8uqp" path="res://scripts/right_hand.gd" id="5_h8bc4"]
[ext_resource type="AudioStream" uid="uid://be0psmdbsae48" path="res://sfx/Fire Extinguisher SOUND Effect.mp3" id="6_q0fb0"]
[ext_resource type="PackedScene" uid="uid://xqimcf20s2jp" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_fullglove_low.tscn" id="7_lrj4e"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="8_r2bmk"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="9_ecl5m"]
[ext_resource type="Script" uid="uid://byit6r5ekjwag" path="res://addons/godot-xr-tools/objects/pickable.gd" id="10_2mclx"]
[ext_resource type="PackedScene" uid="uid://buw47pdtt5wtk" path="res://assets/fire_extinguisher.glb" id="11_se440"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="12_ahtac"]
[ext_resource type="Animation" uid="uid://s1vqcxyqcvea" path="res://addons/godot-xr-tools/hands/animations/right/Grip 5.res" id="13_wf4t4"]
[ext_resource type="Script" uid="uid://cvm6eshjwkkga" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="14_6qpk8"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="15_l1iiu"]
[ext_resource type="Shader" uid="uid://bed17hvciuyvs" path="res://shaders/VFX_Fire.tres" id="16_qpmsa"]
[ext_resource type="Texture2D" uid="uid://bp15l2l4j5q5d" path="res://textures/Flame01.png" id="17_in6cn"]
[ext_resource type="Texture2D" uid="uid://be88ubjhwqw83" path="res://textures/flame_dissolve.png" id="18_jxj5o"]
[ext_resource type="Texture2D" uid="uid://wa7s8bm630d7" path="res://textures/Flame02.png" id="19_atoyb"]
[ext_resource type="Shader" uid="uid://b2ret70o53ssq" path="res://shaders/VFX_Fire_Simple_Particles.tres" id="20_jtoat"]
[ext_resource type="Texture2D" uid="uid://cxi6b1vpciexc" path="res://textures/Flare.PNG" id="21_3tone"]
[ext_resource type="AudioStream" uid="uid://cjrqtkqbd2ce6" path="res://sfx/Fire_Burning_Sound_Effect.mp3" id="22_aujn5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0wfyh"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_sugp2"]
sky_material = SubResource("ProceduralSkyMaterial_0wfyh")

[sub_resource type="Environment" id="Environment_jyhfs"]
background_mode = 2
sky = SubResource("Sky_sugp2")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_sgp6g"]
size = Vector3(60, 1, 60)

[sub_resource type="BoxMesh" id="BoxMesh_o5qli"]
size = Vector3(60, 1, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jyhfs"]
albedo_color = Color(1, 1, 0.0901961, 0.392157)

[sub_resource type="BoxMesh" id="BoxMesh_0wfyh"]
material = SubResource("StandardMaterial3D_jyhfs")
size = Vector3(1, 1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_tbgi4"]
size = Vector3(1, 1, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qawwp"]

[sub_resource type="GDScript" id="GDScript_a8y0u"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gxbn4"]
emission_shape_scale = Vector3(0.05, 0.05, 0.05)
inherit_velocity_ratio = 2.0
direction = Vector3(0, 0, -1)
spread = 5.0
initial_velocity_min = 1.0
initial_velocity_max = 3.0
gravity = Vector3(0, -0.5, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gxbn4"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.548963, 0.548963, 0.548963, 0.396078)

[sub_resource type="SphereMesh" id="SphereMesh_tsorj"]
material = SubResource("StandardMaterial3D_gxbn4")
radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_jbj1t"]
radius = 0.25

[sub_resource type="Resource" id="Resource_ty6od"]
script = ExtResource("14_6qpk8")
closed_pose = ExtResource("13_wf4t4")
metadata/_custom_type_script = "uid://cvm6eshjwkkga"

[sub_resource type="Resource" id="Resource_1i2tp"]
script = ExtResource("14_6qpk8")
closed_pose = ExtResource("13_wf4t4")
metadata/_custom_type_script = "uid://cvm6eshjwkkga"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yps0o"]
render_priority = 0
shader = ExtResource("16_qpmsa")
shader_parameter/MainText = ExtResource("17_in6cn")
shader_parameter/DissolveSpeed = Vector2(0.2, 0.6)
shader_parameter/MainText2 = ExtResource("18_jxj5o")
shader_parameter/DissolveAmount = 0.345

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kimfa"]
gravity = Vector3(0, 0, 0)
color = Color(4, 1.25, 0.4, 0.8)

[sub_resource type="QuadMesh" id="QuadMesh_1ok2o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jnt5h"]
render_priority = 0
shader = ExtResource("16_qpmsa")
shader_parameter/MainText = ExtResource("19_atoyb")
shader_parameter/DissolveSpeed = Vector2(0, 0)
shader_parameter/MainText2 = ExtResource("18_jxj5o")
shader_parameter/DissolveAmount = 0.0

[sub_resource type="Curve" id="Curve_afrco"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.200483, 0.97335), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kimfa"]
curve = SubResource("Curve_afrco")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vf7xc"]
emission_shape = 1
emission_sphere_radius = 0.4
angle_min = -360.0
angle_max = 360.0
gravity = Vector3(0, 5, 0)
damping_min = 0.5
damping_max = 1.0
scale_min = 0.75
scale_max = 1.5
scale_curve = SubResource("CurveTexture_kimfa")
color = Color(4, 1.25, 0.4, 0.8)

[sub_resource type="QuadMesh" id="QuadMesh_1cwqk"]

[sub_resource type="Gradient" id="Gradient_kku75"]
offsets = PackedFloat32Array(0, 0.0384615, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vf7xc"]
gradient = SubResource("Gradient_kku75")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pm3ni"]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 0.6
angle_min = -360.0
angle_max = 360.0
gravity = Vector3(0, 5, 0)
damping_min = 0.5
damping_max = 1.0
scale_max = 2.5
scale_curve = SubResource("CurveTexture_kimfa")
color = Color(0.0708272, 0.0708272, 0.0708272, 0.8)
color_ramp = SubResource("GradientTexture1D_vf7xc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nmxr5"]
render_priority = 0
shader = ExtResource("20_jtoat")
shader_parameter/MainText = ExtResource("21_3tone")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xvp2d"]
emission_shape = 1
emission_sphere_radius = 0.7
gravity = Vector3(0, 10, 0)
scale_min = 0.03
scale_max = 0.25
color = Color(0.875048, 0.36857, 7.70092e-07, 1)
turbulence_enabled = true
turbulence_noise_scale = 5.0

[sub_resource type="QuadMesh" id="QuadMesh_14jof"]

[sub_resource type="SphereShape3D" id="SphereShape3D_lrieh"]

[node name="Main" type="Node3D"]
script = ExtResource("1_55fuk")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jyhfs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.93248, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_sgp6g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_o5qli")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.253771, 0)

[node name="LeftHand" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"

[node name="LeftHand" parent="XROrigin3D/LeftHand" instance=ExtResource("2_ctxlm")]

[node name="MovementDirect" parent="XROrigin3D/LeftHand" instance=ExtResource("3_2xt5l")]
strafe = true

[node name="FunctionPickup" parent="XROrigin3D/LeftHand" instance=ExtResource("4_1kg22")]

[node name="RightHand" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
script = ExtResource("5_h8bc4")
click_sound = ExtResource("6_q0fb0")

[node name="RightHand" parent="XROrigin3D/RightHand" instance=ExtResource("7_lrj4e")]

[node name="MovementTurn" parent="XROrigin3D/RightHand" instance=ExtResource("8_r2bmk")]
turn_mode = 1
step_turn_angle = 45.0

[node name="FunctionPickup" parent="XROrigin3D/RightHand" instance=ExtResource("4_1kg22")]

[node name="ClickSoundPlayer" type="AudioStreamPlayer" parent="XROrigin3D/RightHand"]
stream = ExtResource("6_q0fb0")

[node name="PlayerBody" parent="XROrigin3D" instance=ExtResource("9_ecl5m")]
player_height_max = 1.0

[node name="Table" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60349, -3.71349)
mesh = SubResource("BoxMesh_0wfyh")

[node name="StaticBody3D" type="StaticBody3D" parent="Table"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/StaticBody3D"]
shape = SubResource("BoxShape3D_tbgi4")

[node name="PickableObject" type="RigidBody3D" parent="."]
transform = Transform3D(-1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 3, 0)
collision_layer = 4
collision_mask = 196615
freeze_mode = 1
script = ExtResource("10_2mclx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickableObject"]
transform = Transform3D(0.235, 0, 0, 0, 0.28, 0, 0, 0, 0.235, 0, 0, -0.031896)
shape = SubResource("CapsuleShape3D_qawwp")

[node name="FireExtinguisher2" type="Node3D" parent="PickableObject"]
transform = Transform3D(1.245, 0, 0, 0, 1.245, 0, 0, 0, 1.245, 0, 0, -0.0313433)
script = SubResource("GDScript_a8y0u")

[node name="Nozzle" type="Node3D" parent="PickableObject/FireExtinguisher2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269908, 0)

[node name="Particles" type="GPUParticles3D" parent="PickableObject/FireExtinguisher2/Nozzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0313433)
emitting = false
amount = 100
preprocess = 0.5
speed_scale = 2.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_gxbn4")
draw_pass_1 = SubResource("SphereMesh_tsorj")

[node name="SprayArea" type="Area3D" parent="PickableObject/FireExtinguisher2/Nozzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32566e-07, 0, -1.48273)
collision_layer = 65
collision_mask = 129

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickableObject/FireExtinguisher2/Nozzle/SprayArea"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0, -0.154992, 0)
shape = SubResource("SphereShape3D_jbj1t")

[node name="Sketchfab_Scene" parent="PickableObject/FireExtinguisher2" instance=ExtResource("11_se440")]
transform = Transform3D(0.528438, 0, 0.848972, 0, 1, 0, -0.848972, 0, 0.528438, 0, 0, 0)

[node name="GrabPointHandLeft" parent="PickableObject" instance=ExtResource("12_ahtac")]
transform = Transform3D(0.954048, 0, 0.299657, 0, 1, 0, -0.299657, 0, 0.954048, -0.0459147, 0.0980229, -0.0489435)
visible = true
hand_pose = SubResource("Resource_ty6od")

[node name="GrabPointHandRight" parent="PickableObject" instance=ExtResource("15_l1iiu")]
transform = Transform3D(0.753196, 0, -0.657796, 0, 1, 0, 0.657796, 0, 0.753196, 0.0540516, 0.0947559, -0.0272197)
visible = true
hand_pose = SubResource("Resource_1i2tp")

[node name="Fire" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.88862, 10.2096)

[node name="StaticFlame" type="GPUParticles3D" parent="Fire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0104183, 0)
material_override = SubResource("ShaderMaterial_yps0o")
amount = 1
lifetime = 5.0
process_material = SubResource("ParticleProcessMaterial_kimfa")
draw_pass_1 = SubResource("QuadMesh_1ok2o")

[node name="Flames" type="GPUParticles3D" parent="Fire"]
material_override = SubResource("ShaderMaterial_jnt5h")
amount = 20
lifetime = 1.2
process_material = SubResource("ParticleProcessMaterial_vf7xc")
draw_pass_1 = SubResource("QuadMesh_1cwqk")

[node name="Smoke" type="GPUParticles3D" parent="Fire"]
sorting_offset = -1.0
material_override = SubResource("ShaderMaterial_jnt5h")
amount = 50
lifetime = 2.5
process_material = SubResource("ParticleProcessMaterial_pm3ni")
draw_pass_1 = SubResource("QuadMesh_1cwqk")

[node name="ParticlesFloating" type="GPUParticles3D" parent="Fire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.640852, 0)
sorting_offset = 1.0
material_override = SubResource("ShaderMaterial_nmxr5")
amount = 50
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_xvp2d")
draw_pass_1 = SubResource("QuadMesh_14jof")

[node name="Fire" type="StaticBody3D" parent="Fire"]
collision_layer = 129

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fire/Fire"]
shape = SubResource("SphereShape3D_lrieh")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Fire/Fire"]
stream = ExtResource("22_aujn5")
volume_db = 10.0
autoplay = true
max_distance = 20.65

[connection signal="dropped" from="PickableObject" to="XROrigin3D/RightHand" method="_on_object_put_down"]
[connection signal="picked_up" from="PickableObject" to="XROrigin3D/RightHand" method="_on_object_picked_up"]
[connection signal="area_entered" from="PickableObject/FireExtinguisher2/Nozzle/SprayArea" to="XROrigin3D/RightHand" method="_on_spray_area_body_entered"]
